--- a/requirements.txt
+++ b/requirements.txt
@@ -1,44 +1,19 @@
-absl-py==2.0.0
-cachetools==5.3.2
 certifi==2023.7.22
-charset-normalizer==3.3.1
-contourpy==1.1.1
-cycler==0.12.1
-dlib==19.24.2
-filelock==3.12.4
-fonttools==4.43.1
-fsspec==2023.10.0
-google-auth==2.23.3
-google-auth-oauthlib==1.1.0
-grpcio==1.59.0
+charset-normalizer==3.2.0
+editdistance==0.6.2
+filelock==3.12.3
 idna==3.4
 Jinja2==3.1.2
-kiwisolver==1.4.5
-Markdown==3.5
 MarkupSafe==2.1.3
-matplotlib==3.8.0
 mpmath==1.3.0
-networkx==3.2
-numpy==1.26.1
-oauthlib==3.2.2
-opencv-python==4.8.1.78
-packaging==23.2
-Pillow==10.1.0
-protobuf==4.23.4
-pyasn1==0.5.0
-pyasn1-modules==0.3.0
-pyparsing==3.1.1
-python-dateutil==2.8.2
+networkx==3.1
+numpy==1.25.2
+opencv-python==4.8.0.76
+Pillow==10.0.0
 requests==2.31.0
-requests-oauthlib==1.3.1
-rsa==4.9
-six==1.16.0
 sympy==1.12
-tensorboard==2.15.0
-tensorboard-data-server==0.7.2
-torch==2.1.0
-torchaudio==2.1.0
-torchvision==0.16.0
-typing_extensions==4.8.0
-urllib3==2.0.7
-Werkzeug==3.0.1
+torch==2.0.1
+torchaudio==2.0.2
+torchvision==0.15.2
+typing_extensions==4.7.1
+urllib3==2.0.4
