--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,39 @@
+absl-py==2.0.0
+cachetools==5.3.2
 certifi==2023.7.22
 charset-normalizer==3.2.0
+dlib==19.24.2
 editdistance==0.6.2
 filelock==3.12.3
+google-auth==2.23.3
+google-auth-oauthlib==1.1.0
+grpcio==1.59.0
 idna==3.4
+importlib-metadata==6.8.0
 Jinja2==3.1.2
+Markdown==3.5
 MarkupSafe==2.1.3
 mpmath==1.3.0
 networkx==3.1
 numpy==1.25.2
+oauthlib==3.2.2
 opencv-python==4.8.0.76
 Pillow==10.0.0
+protobuf==4.23.4
+pyasn1==0.5.0
+pyasn1-modules==0.3.0
 requests==2.31.0
+requests-oauthlib==1.3.1
+rsa==4.9
+six==1.16.0
 sympy==1.12
+tensorboard==2.15.0
+tensorboard-data-server==0.7.2
 torch==2.0.1
 torchaudio==2.0.2
 torchvision==0.15.2
+tqdm==4.66.1
 typing_extensions==4.7.1
 urllib3==2.0.4
+Werkzeug==3.0.1
+zipp==3.17.0
